--- a/.github/workflows/main-other.yml
+++ b/.github/workflows/main-other.yml
@@ -4,6 +4,5 @@ jobs:
   checkout:
     runs-on: ubuntu-latest
     steps:
-      - run: ls
       - uses: actions/checkout@v4
-      - run: ls
+      - run: ls -lah
