--- a/.github/workflows/main-other.yml
+++ b/.github/workflows/main-other.yml
@@ -5,4 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          sparse-checkout: .
       - run: ls -lah
