--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,18 @@
 name: Mon premier workflow
 on: [push]
+env:
+  VAR_1: from workflow
 jobs: 
   say-hello:
+    env: 
+      VAR_2: from job
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Hello Wold !"
+      - name: hello
+        env:
+          VAR_3: from step
+        run: |
+          echo VAR_1: $VAR_1
+          echo VAR_2: $VAR_2
+          echo VAR_3: $VAR_3
+
