--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,6 @@ jobs:
           echo VAR_1: $VAR_1
           echo VAR_2: $VAR_2
           echo VAR_3: $VAR_3
+          echo VAR_4: $VAR_4
+          echo SECRET_1: $SECRET_1
 
