--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,8 @@ jobs:
           echo VAR_3: $VAR_3
           echo VAR_4: $VAR_4
           echo SECRET_1: $SECRET_1
+          echo GITHUB_REF: $GITHUB_REF
+          echo GITHUB_EVENT_NAME: $GITHUB_EVENT_NAME
+          echo GITHUB_SHA: $GITHUB_SHA
+          
 
