--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,11 @@ jobs:
           VAR_3: from step
         run: |
           echo VAR_1: $VAR_1
+          echo VAR_1: ${{ env.VAR_1 }}
           echo VAR_2: $VAR_2
           echo VAR_3: $VAR_3
           echo VAR_4: ${{ vars.VAR_4 }}
-          echo SECRET_1: $SECRET_1
+          echo SECRET_1: ${{ secrets.SECRET_1 }}
           echo GITHUB_REF: $GITHUB_REF
           echo GITHUB_EVENT_NAME: $GITHUB_EVENT_NAME
           echo GITHUB_SHA: $GITHUB_SHA
