--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,7 @@ jobs:
           echo GITHUB_REF: $GITHUB_REF
           echo GITHUB_EVENT_NAME: $GITHUB_EVENT_NAME
           echo GITHUB_SHA: $GITHUB_SHA
+          echo 42
+          echo 'toto'
           
 
