--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
           echo GITHUB_EVENT_NAME: $GITHUB_EVENT_NAME
           echo GITHUB_SHA: $GITHUB_SHA
           echo 42
+          echo ${{ 42 }}
+          echo ${{ 'main' == 'top' }}
+          echo ${{ contains(github.ref, 'main') }}
           echo 'toto'
           
 
