--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,6 @@ jobs:
       - run : echo ${{ contains(github.ref, 'main') }}
       - run : echo ${{ 'main' == 'top' }}
       - run : echo ${{ 42 }}
+      - run : exit 1
           
 
