--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,10 +1,10 @@
-name: Mon premier workflow
+name: Déploiement
 on: [push]
 env:
   VAR_1: from workflow
 jobs:
   deploy:
-    if: github.ref === 'refs/heads/main'
+    if: ${{ github.ref === 'refs/heads/main' }}
     runs-on: ubuntu-latest
     steps:
       - run: echo deploy in prod
