--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,10 +1,11 @@
 name: Déploiement
 on: [push]
-env:
-  VAR_1: from workflow
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo build in prod
   deploy:
-    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - run: echo deploy in prod
