--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,9 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: step1
-        run: echo $GITHUB_ENV
+        run: | 
+          echo $GITHUB_ENV
+          echo FROM_STEP_1=value_step_1 >> GITHUB_ENV
       - id: step2
-        run: echo build in prod
+        run: |
+          echo $FROM_STEP_1
+          echo ${{ env.FROM_STEP_1 }}
   # deploy:
   #   needs: build
   #   runs-on: ubuntu-latest
