--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,7 +7,7 @@ jobs:
       - id: step1
         run: | 
           echo $GITHUB_ENV
-          echo FROM_STEP_1=value_step_1 >> GITHUB_ENV
+          echo FROM_STEP_1=value_step_1 >> $GITHUB_ENV
       - id: step2
         run: |
           echo $FROM_STEP_1
