--- a/.github/workflows/command.yml
+++ b/.github/workflows/command.yml
@@ -3,7 +3,7 @@ on:
   push:
 jobs:
   job1:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
       - run: |
           echo ::notice::Un message d'information
