--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo ::notice::Un message d'information
-          echo ::warning::Un message d'avertissement
-          echo ::error::Un message d'erreur
+          echo ::notice::Un message d\'information
+          echo ::warning::Un message d\'avertissement
+          echo ::error::Un message d\'erreur
         
   
     
