--- a/.github/workflows/command.yml
+++ b/.github/workflows/command.yml
@@ -1,11 +1,10 @@
 name: commands
 on: 
   push:
+  
 jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-      - run: echo fruit=pomme >> $GITHUB_OUTPUT
-        id: step1
-      - run: echo ::error file=unfichier.txt,line=1,endLine=2,col=5::fruit is ${{ steps.step1.outputs.fruit }} should be poire
-        if: steps.step1.outputs.fruit != 'poire'
+      - run: echo ::debug::je suis ici
+     
