--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v4
       - name: install dependencies
         run: npm install
-        working-directory: ./vite-projetc
+        working-directory: ./vite-project
 
   
     
