--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,11 @@ jobs:
         uses: actions/setup-node@v4
       - name: fetch repository
         uses: actions/checkout@v4
+      - name: configure cache
+        uses: actions/cache@v3
+        with:
+          key: ${{ runner.os }}-${{ hashFiles('./vite-project/package-lock.json') }}
+          path: .:vim-project/.npm
       - name: install dependencies
-        run: npm install
+        run: npm ci --cache .npm
         working-directory: ./vite-project
-
-  
-    
