npm option offline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('./vite-project/package-lock.json') }}
           path: ./vim-project/.npm
       - name: install dependencies
-        run: npm ci --cache .npm
+        run: npm ci --cache .npm --prefer-offline
         working-directory: ./vite-project
