--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        vers: [12, 13, 14]
+        include:
+          - cloud: ovh
+            endpoint: ovh-eu
+          - cloud: aws
+            endpoint: aws-us
         
     steps:
-      - run: echo ${{ matrix.os }} ${{ matrix.vers }}
+      - run: echo ${{ matrix.cloud }} ${{ matrix.endpoint }}
