--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest]
         include:
           - cloud: ovh
             endpoint: ovh-eu
-          - cloud: aws
-            endpoint: aws-us
+            os: ubuntu-latest
         
     steps:
-      - run: echo ${{ matrix.cloud }} ${{ matrix.endpoint }}
+      - run: echo ${{ matrix.cloud }} ${{ matrix.endpoint }} ${{ matrix.os }}
