--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,15 +3,7 @@ on:
   push:
 
 jobs:
-  command:
+  token_job:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        include:
-          - cloud: ovh
-            endpoint: ovh-eu
-            os: ubuntu-latest
-        
     steps:
-      - run: echo ${{ matrix.cloud }} ${{ matrix.endpoint }} ${{ matrix.os }}
+      - run: echo Hello world !
