fix git config syntax

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           echo 123 > test.txt
-          git congif --global user.email "geoffrey@toto.fr"
-          git congif --global user.name "Geoffrey"
+          git config --global user.email "geoffrey@toto.fr"
+          git config --global user.name "Geoffrey"
           git add test.txt
           git commit -m "Add test.txt"
           git push origin main
